trunk/Archive2/dc/305a6f6cdb8994/output
main.cpp: In function 'int main()':
main.cpp:20:5: error: 'cogt' is not a member of 'std'
     std::cogt << words << std::endl;
     ^
